# spellchecker

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/spellchecker/: i_spellchecker.h  spellchecker.h
src/: main.cpp  spellchecker.cpp
tests/: CMakeLists.txt  cyrillic_test.cpp  spellchecker_test.cpp
